// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Service overview instances detailed statistics when data is loaded fetching data with comparison returns the right data for current and previous periods 5`] = `
Object {
  "currentPeriod": Object {
    "6dc7ea7824d0887cdfa0cb876bca5b27346c8b7cd196a9b1a6fe91968b99fbc2": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627374180000,
          "y": 0.002,
        },
        Object {
          "x": 1627374240000,
          "y": 0.0015,
        },
        Object {
          "x": 1627374300000,
          "y": 0.002,
        },
        Object {
          "x": 1627374360000,
          "y": 0.002,
        },
        Object {
          "x": 1627374420000,
          "y": 0.0025,
        },
        Object {
          "x": 1627374480000,
          "y": 0.002,
        },
        Object {
          "x": 1627374540000,
          "y": 0.007,
        },
        Object {
          "x": 1627374600000,
          "y": 0.002,
        },
        Object {
          "x": 1627374660000,
          "y": 0.002,
        },
        Object {
          "x": 1627374720000,
          "y": 0.002,
        },
        Object {
          "x": 1627374780000,
          "y": 0.0035,
        },
        Object {
          "x": 1627374840000,
          "y": 0.002,
        },
        Object {
          "x": 1627374900000,
          "y": 0.002,
        },
        Object {
          "x": 1627374960000,
          "y": 0.0015,
        },
        Object {
          "x": 1627375020000,
          "y": 0.0015,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627374180000,
          "y": 0,
        },
        Object {
          "x": 1627374240000,
          "y": 0,
        },
        Object {
          "x": 1627374300000,
          "y": 0.0714285714285714,
        },
        Object {
          "x": 1627374360000,
          "y": 0,
        },
        Object {
          "x": 1627374420000,
          "y": 0.0263157894736842,
        },
        Object {
          "x": 1627374480000,
          "y": 0.0294117647058824,
        },
        Object {
          "x": 1627374540000,
          "y": 0,
        },
        Object {
          "x": 1627374600000,
          "y": 0.0465116279069767,
        },
        Object {
          "x": 1627374660000,
          "y": 0,
        },
        Object {
          "x": 1627374720000,
          "y": 0,
        },
        Object {
          "x": 1627374780000,
          "y": 0.125,
        },
        Object {
          "x": 1627374840000,
          "y": 0,
        },
        Object {
          "x": 1627374900000,
          "y": 0,
        },
        Object {
          "x": 1627374960000,
          "y": 0,
        },
        Object {
          "x": 1627375020000,
          "y": 0,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627374180000,
          "y": 9821.54545454545,
        },
        Object {
          "x": 1627374240000,
          "y": 15175,
        },
        Object {
          "x": 1627374300000,
          "y": 11944.1428571429,
        },
        Object {
          "x": 1627374360000,
          "y": 10557.2222222222,
        },
        Object {
          "x": 1627374420000,
          "y": 25429.1538461538,
        },
        Object {
          "x": 1627374480000,
          "y": 21736.1428571429,
        },
        Object {
          "x": 1627374540000,
          "y": 28604.3333333333,
        },
        Object {
          "x": 1627374600000,
          "y": 20103.5333333333,
        },
        Object {
          "x": 1627374660000,
          "y": 3311,
        },
        Object {
          "x": 1627374720000,
          "y": 7521,
        },
        Object {
          "x": 1627374780000,
          "y": 8063,
        },
        Object {
          "x": 1627374840000,
          "y": 8101.4,
        },
        Object {
          "x": 1627374900000,
          "y": 24196.3333333333,
        },
        Object {
          "x": 1627374960000,
          "y": 14157,
        },
        Object {
          "x": 1627375020000,
          "y": 15103,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627374180000,
          "y": 0.824100494384766,
        },
        Object {
          "x": 1627374240000,
          "y": 0.824317932128906,
        },
        Object {
          "x": 1627374300000,
          "y": 0.824752807617188,
        },
        Object {
          "x": 1627374360000,
          "y": 0.825035095214844,
        },
        Object {
          "x": 1627374420000,
          "y": 0.825420379638672,
        },
        Object {
          "x": 1627374480000,
          "y": 0.825778961181641,
        },
        Object {
          "x": 1627374540000,
          "y": 0.823772430419922,
        },
        Object {
          "x": 1627374600000,
          "y": 0.824184417724609,
        },
        Object {
          "x": 1627374660000,
          "y": 0.824348449707031,
        },
        Object {
          "x": 1627374720000,
          "y": 0.824550628662109,
        },
        Object {
          "x": 1627374780000,
          "y": 0.826988220214844,
        },
        Object {
          "x": 1627374840000,
          "y": 0.82958984375,
        },
        Object {
          "x": 1627374900000,
          "y": 0.829998016357422,
        },
        Object {
          "x": 1627374960000,
          "y": 0.830215454101563,
        },
        Object {
          "x": 1627375020000,
          "y": 0.830368041992188,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "serviceNodeName": "6dc7ea7824d0887cdfa0cb876bca5b27346c8b7cd196a9b1a6fe91968b99fbc2",
      "throughput": Array [
        Object {
          "x": 1627374180000,
          "y": 39,
        },
        Object {
          "x": 1627374240000,
          "y": 30,
        },
        Object {
          "x": 1627374300000,
          "y": 28,
        },
        Object {
          "x": 1627374360000,
          "y": 37,
        },
        Object {
          "x": 1627374420000,
          "y": 38,
        },
        Object {
          "x": 1627374480000,
          "y": 34,
        },
        Object {
          "x": 1627374540000,
          "y": 51,
        },
        Object {
          "x": 1627374600000,
          "y": 43,
        },
        Object {
          "x": 1627374660000,
          "y": 9,
        },
        Object {
          "x": 1627374720000,
          "y": 23,
        },
        Object {
          "x": 1627374780000,
          "y": 8,
        },
        Object {
          "x": 1627374840000,
          "y": 28,
        },
        Object {
          "x": 1627374900000,
          "y": 32,
        },
        Object {
          "x": 1627374960000,
          "y": 25,
        },
        Object {
          "x": 1627375020000,
          "y": 8,
        },
        Object {
          "x": 1627375080000,
          "y": 0,
        },
      ],
    },
  },
  "previousPeriod": Object {
    "6dc7ea7824d0887cdfa0cb876bca5b27346c8b7cd196a9b1a6fe91968b99fbc2": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627374180000,
          "y": 0.002,
        },
        Object {
          "x": 1627374240000,
          "y": 0.0015,
        },
        Object {
          "x": 1627374300000,
          "y": 0.002,
        },
        Object {
          "x": 1627374360000,
          "y": 0.002,
        },
        Object {
          "x": 1627374420000,
          "y": 0.0015,
        },
        Object {
          "x": 1627374480000,
          "y": 0.002,
        },
        Object {
          "x": 1627374540000,
          "y": 0.002,
        },
        Object {
          "x": 1627374600000,
          "y": 0.002,
        },
        Object {
          "x": 1627374660000,
          "y": 0.002,
        },
        Object {
          "x": 1627374720000,
          "y": 0.0015,
        },
        Object {
          "x": 1627374780000,
          "y": 0.0015,
        },
        Object {
          "x": 1627374840000,
          "y": 0.0035,
        },
        Object {
          "x": 1627374900000,
          "y": 0.003,
        },
        Object {
          "x": 1627374960000,
          "y": 0.002,
        },
        Object {
          "x": 1627375020000,
          "y": 0.002,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627374180000,
          "y": 0.121212121212121,
        },
        Object {
          "x": 1627374240000,
          "y": 0.0714285714285714,
        },
        Object {
          "x": 1627374300000,
          "y": 0,
        },
        Object {
          "x": 1627374360000,
          "y": 0,
        },
        Object {
          "x": 1627374420000,
          "y": 0,
        },
        Object {
          "x": 1627374480000,
          "y": 0,
        },
        Object {
          "x": 1627374540000,
          "y": 0,
        },
        Object {
          "x": 1627374600000,
          "y": 0,
        },
        Object {
          "x": 1627374660000,
          "y": 0.0303030303030303,
        },
        Object {
          "x": 1627374720000,
          "y": null,
        },
        Object {
          "x": 1627374780000,
          "y": 0,
        },
        Object {
          "x": 1627374840000,
          "y": 0.0625,
        },
        Object {
          "x": 1627374900000,
          "y": 0.0476190476190476,
        },
        Object {
          "x": 1627374960000,
          "y": 0,
        },
        Object {
          "x": 1627375020000,
          "y": 0,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627374180000,
          "y": 12008.6,
        },
        Object {
          "x": 1627374240000,
          "y": 10207,
        },
        Object {
          "x": 1627374300000,
          "y": 17692.1428571429,
        },
        Object {
          "x": 1627374360000,
          "y": 13574.3846153846,
        },
        Object {
          "x": 1627374420000,
          "y": 13247,
        },
        Object {
          "x": 1627374480000,
          "y": 10495,
        },
        Object {
          "x": 1627374540000,
          "y": 25359,
        },
        Object {
          "x": 1627374600000,
          "y": 15160.6,
        },
        Object {
          "x": 1627374660000,
          "y": 17819,
        },
        Object {
          "x": 1627374720000,
          "y": null,
        },
        Object {
          "x": 1627374780000,
          "y": 12047,
        },
        Object {
          "x": 1627374840000,
          "y": 15913.6666666667,
        },
        Object {
          "x": 1627374900000,
          "y": 13746.2,
        },
        Object {
          "x": 1627374960000,
          "y": 9519,
        },
        Object {
          "x": 1627375020000,
          "y": 34824.6,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627374180000,
          "y": 0.825572967529297,
        },
        Object {
          "x": 1627374240000,
          "y": 0.825843811035156,
        },
        Object {
          "x": 1627374300000,
          "y": 0.826179504394531,
        },
        Object {
          "x": 1627374360000,
          "y": 0.82659912109375,
        },
        Object {
          "x": 1627374420000,
          "y": 0.826702117919922,
        },
        Object {
          "x": 1627374480000,
          "y": 0.826923370361328,
        },
        Object {
          "x": 1627374540000,
          "y": 0.827106475830078,
        },
        Object {
          "x": 1627374600000,
          "y": 0.827262878417969,
        },
        Object {
          "x": 1627374660000,
          "y": 0.827518463134766,
        },
        Object {
          "x": 1627374720000,
          "y": 0.827735900878906,
        },
        Object {
          "x": 1627374780000,
          "y": 0.827884674072266,
        },
        Object {
          "x": 1627374840000,
          "y": 0.828010559082031,
        },
        Object {
          "x": 1627374900000,
          "y": 0.823200225830078,
        },
        Object {
          "x": 1627374960000,
          "y": 0.823371887207031,
        },
        Object {
          "x": 1627375020000,
          "y": 0.823692321777344,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "serviceNodeName": "6dc7ea7824d0887cdfa0cb876bca5b27346c8b7cd196a9b1a6fe91968b99fbc2",
      "throughput": Array [
        Object {
          "x": 1627374180000,
          "y": 33,
        },
        Object {
          "x": 1627374240000,
          "y": 14,
        },
        Object {
          "x": 1627374300000,
          "y": 42,
        },
        Object {
          "x": 1627374360000,
          "y": 43,
        },
        Object {
          "x": 1627374420000,
          "y": 4,
        },
        Object {
          "x": 1627374480000,
          "y": 19,
        },
        Object {
          "x": 1627374540000,
          "y": 22,
        },
        Object {
          "x": 1627374600000,
          "y": 20,
        },
        Object {
          "x": 1627374660000,
          "y": 33,
        },
        Object {
          "x": 1627374720000,
          "y": 0,
        },
        Object {
          "x": 1627374780000,
          "y": 23,
        },
        Object {
          "x": 1627374840000,
          "y": 16,
        },
        Object {
          "x": 1627374900000,
          "y": 21,
        },
        Object {
          "x": 1627374960000,
          "y": 19,
        },
        Object {
          "x": 1627375020000,
          "y": 30,
        },
        Object {
          "x": 1627375080000,
          "y": 0,
        },
      ],
    },
  },
}
`;

exports[`APM API tests basic apm_8.0.0 Service overview instances detailed statistics when data is loaded fetching data without comparison returns the right data 3`] = `
Object {
  "currentPeriod": Object {
    "6dc7ea7824d0887cdfa0cb876bca5b27346c8b7cd196a9b1a6fe91968b99fbc2": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627373280000,
          "y": 0.002,
        },
        Object {
          "x": 1627373340000,
          "y": 0.0015,
        },
        Object {
          "x": 1627373400000,
          "y": 0.002,
        },
        Object {
          "x": 1627373460000,
          "y": 0.002,
        },
        Object {
          "x": 1627373520000,
          "y": 0.0015,
        },
        Object {
          "x": 1627373580000,
          "y": 0.002,
        },
        Object {
          "x": 1627373640000,
          "y": 0.002,
        },
        Object {
          "x": 1627373700000,
          "y": 0.002,
        },
        Object {
          "x": 1627373760000,
          "y": 0.002,
        },
        Object {
          "x": 1627373820000,
          "y": 0.0015,
        },
        Object {
          "x": 1627373880000,
          "y": 0.0015,
        },
        Object {
          "x": 1627373940000,
          "y": 0.0035,
        },
        Object {
          "x": 1627374000000,
          "y": 0.003,
        },
        Object {
          "x": 1627374060000,
          "y": 0.002,
        },
        Object {
          "x": 1627374120000,
          "y": 0.002,
        },
        Object {
          "x": 1627374180000,
          "y": 0.002,
        },
        Object {
          "x": 1627374240000,
          "y": 0.0015,
        },
        Object {
          "x": 1627374300000,
          "y": 0.002,
        },
        Object {
          "x": 1627374360000,
          "y": 0.002,
        },
        Object {
          "x": 1627374420000,
          "y": 0.0025,
        },
        Object {
          "x": 1627374480000,
          "y": 0.002,
        },
        Object {
          "x": 1627374540000,
          "y": 0.007,
        },
        Object {
          "x": 1627374600000,
          "y": 0.002,
        },
        Object {
          "x": 1627374660000,
          "y": 0.002,
        },
        Object {
          "x": 1627374720000,
          "y": 0.002,
        },
        Object {
          "x": 1627374780000,
          "y": 0.0035,
        },
        Object {
          "x": 1627374840000,
          "y": 0.002,
        },
        Object {
          "x": 1627374900000,
          "y": 0.002,
        },
        Object {
          "x": 1627374960000,
          "y": 0.0015,
        },
        Object {
          "x": 1627375020000,
          "y": 0.0015,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627373280000,
          "y": 0.121212121212121,
        },
        Object {
          "x": 1627373340000,
          "y": 0.0714285714285714,
        },
        Object {
          "x": 1627373400000,
          "y": 0,
        },
        Object {
          "x": 1627373460000,
          "y": 0,
        },
        Object {
          "x": 1627373520000,
          "y": 0,
        },
        Object {
          "x": 1627373580000,
          "y": 0,
        },
        Object {
          "x": 1627373640000,
          "y": 0,
        },
        Object {
          "x": 1627373700000,
          "y": 0,
        },
        Object {
          "x": 1627373760000,
          "y": 0.0303030303030303,
        },
        Object {
          "x": 1627373820000,
          "y": null,
        },
        Object {
          "x": 1627373880000,
          "y": 0,
        },
        Object {
          "x": 1627373940000,
          "y": 0.0625,
        },
        Object {
          "x": 1627374000000,
          "y": 0.0476190476190476,
        },
        Object {
          "x": 1627374060000,
          "y": 0,
        },
        Object {
          "x": 1627374120000,
          "y": 0,
        },
        Object {
          "x": 1627374180000,
          "y": 0,
        },
        Object {
          "x": 1627374240000,
          "y": 0,
        },
        Object {
          "x": 1627374300000,
          "y": 0.0714285714285714,
        },
        Object {
          "x": 1627374360000,
          "y": 0,
        },
        Object {
          "x": 1627374420000,
          "y": 0.0263157894736842,
        },
        Object {
          "x": 1627374480000,
          "y": 0.0294117647058824,
        },
        Object {
          "x": 1627374540000,
          "y": 0,
        },
        Object {
          "x": 1627374600000,
          "y": 0.0465116279069767,
        },
        Object {
          "x": 1627374660000,
          "y": 0,
        },
        Object {
          "x": 1627374720000,
          "y": 0,
        },
        Object {
          "x": 1627374780000,
          "y": 0.125,
        },
        Object {
          "x": 1627374840000,
          "y": 0,
        },
        Object {
          "x": 1627374900000,
          "y": 0,
        },
        Object {
          "x": 1627374960000,
          "y": 0,
        },
        Object {
          "x": 1627375020000,
          "y": 0,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627373280000,
          "y": 12008.6,
        },
        Object {
          "x": 1627373340000,
          "y": 10207,
        },
        Object {
          "x": 1627373400000,
          "y": 17692.1428571429,
        },
        Object {
          "x": 1627373460000,
          "y": 13574.3846153846,
        },
        Object {
          "x": 1627373520000,
          "y": 13247,
        },
        Object {
          "x": 1627373580000,
          "y": 10495,
        },
        Object {
          "x": 1627373640000,
          "y": 25359,
        },
        Object {
          "x": 1627373700000,
          "y": 15160.6,
        },
        Object {
          "x": 1627373760000,
          "y": 17819,
        },
        Object {
          "x": 1627373820000,
          "y": null,
        },
        Object {
          "x": 1627373880000,
          "y": 12047,
        },
        Object {
          "x": 1627373940000,
          "y": 15913.6666666667,
        },
        Object {
          "x": 1627374000000,
          "y": 13746.2,
        },
        Object {
          "x": 1627374060000,
          "y": 9519,
        },
        Object {
          "x": 1627374120000,
          "y": 34824.6,
        },
        Object {
          "x": 1627374180000,
          "y": 9821.54545454545,
        },
        Object {
          "x": 1627374240000,
          "y": 15175,
        },
        Object {
          "x": 1627374300000,
          "y": 11944.1428571429,
        },
        Object {
          "x": 1627374360000,
          "y": 10557.2222222222,
        },
        Object {
          "x": 1627374420000,
          "y": 25429.1538461538,
        },
        Object {
          "x": 1627374480000,
          "y": 21736.1428571429,
        },
        Object {
          "x": 1627374540000,
          "y": 28604.3333333333,
        },
        Object {
          "x": 1627374600000,
          "y": 20103.5333333333,
        },
        Object {
          "x": 1627374660000,
          "y": 3311,
        },
        Object {
          "x": 1627374720000,
          "y": 7521,
        },
        Object {
          "x": 1627374780000,
          "y": 8063,
        },
        Object {
          "x": 1627374840000,
          "y": 8101.4,
        },
        Object {
          "x": 1627374900000,
          "y": 24196.3333333333,
        },
        Object {
          "x": 1627374960000,
          "y": 14157,
        },
        Object {
          "x": 1627375020000,
          "y": 15103,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627373280000,
          "y": 0.825572967529297,
        },
        Object {
          "x": 1627373340000,
          "y": 0.825843811035156,
        },
        Object {
          "x": 1627373400000,
          "y": 0.826179504394531,
        },
        Object {
          "x": 1627373460000,
          "y": 0.82659912109375,
        },
        Object {
          "x": 1627373520000,
          "y": 0.826702117919922,
        },
        Object {
          "x": 1627373580000,
          "y": 0.826923370361328,
        },
        Object {
          "x": 1627373640000,
          "y": 0.827106475830078,
        },
        Object {
          "x": 1627373700000,
          "y": 0.827262878417969,
        },
        Object {
          "x": 1627373760000,
          "y": 0.827518463134766,
        },
        Object {
          "x": 1627373820000,
          "y": 0.827735900878906,
        },
        Object {
          "x": 1627373880000,
          "y": 0.827884674072266,
        },
        Object {
          "x": 1627373940000,
          "y": 0.828010559082031,
        },
        Object {
          "x": 1627374000000,
          "y": 0.823200225830078,
        },
        Object {
          "x": 1627374060000,
          "y": 0.823371887207031,
        },
        Object {
          "x": 1627374120000,
          "y": 0.823692321777344,
        },
        Object {
          "x": 1627374180000,
          "y": 0.824100494384766,
        },
        Object {
          "x": 1627374240000,
          "y": 0.824317932128906,
        },
        Object {
          "x": 1627374300000,
          "y": 0.824752807617188,
        },
        Object {
          "x": 1627374360000,
          "y": 0.825035095214844,
        },
        Object {
          "x": 1627374420000,
          "y": 0.825420379638672,
        },
        Object {
          "x": 1627374480000,
          "y": 0.825778961181641,
        },
        Object {
          "x": 1627374540000,
          "y": 0.823772430419922,
        },
        Object {
          "x": 1627374600000,
          "y": 0.824184417724609,
        },
        Object {
          "x": 1627374660000,
          "y": 0.824348449707031,
        },
        Object {
          "x": 1627374720000,
          "y": 0.824550628662109,
        },
        Object {
          "x": 1627374780000,
          "y": 0.826988220214844,
        },
        Object {
          "x": 1627374840000,
          "y": 0.82958984375,
        },
        Object {
          "x": 1627374900000,
          "y": 0.829998016357422,
        },
        Object {
          "x": 1627374960000,
          "y": 0.830215454101563,
        },
        Object {
          "x": 1627375020000,
          "y": 0.830368041992188,
        },
        Object {
          "x": 1627375080000,
          "y": null,
        },
      ],
      "serviceNodeName": "6dc7ea7824d0887cdfa0cb876bca5b27346c8b7cd196a9b1a6fe91968b99fbc2",
      "throughput": Array [
        Object {
          "x": 1627373280000,
          "y": 33,
        },
        Object {
          "x": 1627373340000,
          "y": 14,
        },
        Object {
          "x": 1627373400000,
          "y": 42,
        },
        Object {
          "x": 1627373460000,
          "y": 43,
        },
        Object {
          "x": 1627373520000,
          "y": 4,
        },
        Object {
          "x": 1627373580000,
          "y": 19,
        },
        Object {
          "x": 1627373640000,
          "y": 22,
        },
        Object {
          "x": 1627373700000,
          "y": 20,
        },
        Object {
          "x": 1627373760000,
          "y": 33,
        },
        Object {
          "x": 1627373820000,
          "y": 0,
        },
        Object {
          "x": 1627373880000,
          "y": 23,
        },
        Object {
          "x": 1627373940000,
          "y": 16,
        },
        Object {
          "x": 1627374000000,
          "y": 21,
        },
        Object {
          "x": 1627374060000,
          "y": 19,
        },
        Object {
          "x": 1627374120000,
          "y": 30,
        },
        Object {
          "x": 1627374180000,
          "y": 39,
        },
        Object {
          "x": 1627374240000,
          "y": 30,
        },
        Object {
          "x": 1627374300000,
          "y": 28,
        },
        Object {
          "x": 1627374360000,
          "y": 37,
        },
        Object {
          "x": 1627374420000,
          "y": 38,
        },
        Object {
          "x": 1627374480000,
          "y": 34,
        },
        Object {
          "x": 1627374540000,
          "y": 51,
        },
        Object {
          "x": 1627374600000,
          "y": 43,
        },
        Object {
          "x": 1627374660000,
          "y": 9,
        },
        Object {
          "x": 1627374720000,
          "y": 23,
        },
        Object {
          "x": 1627374780000,
          "y": 8,
        },
        Object {
          "x": 1627374840000,
          "y": 28,
        },
        Object {
          "x": 1627374900000,
          "y": 32,
        },
        Object {
          "x": 1627374960000,
          "y": 25,
        },
        Object {
          "x": 1627375020000,
          "y": 8,
        },
        Object {
          "x": 1627375080000,
          "y": 0,
        },
      ],
    },
  },
  "previousPeriod": Object {},
}
`;
